--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,4 +1,5 @@
 {
     "@@locale": "en",
-    "app_name": "Fazakir"
+    "app_name": "Fazakir",
+    "light_journey_begins_here": "The journey of light begins here, be the first to discover our new spiritual app"
 }
