Update HomeView and RowLabelWithShowMore Widgets with Localization Support
- Integrated localization support in HomeViewBody and HomeViewBodyHeader widgets by importing and using the generated localization strings from 'package:fazakir/generated/l10n.dart'.
- Replaced hardcoded strings in HomeViewBody with localized strings for labels and text, including 'الاختصارات', 'ذكر اليوم من..', and 'اهلا بيك'.
- Updated the RowLabelWithShowMore widget to accept an optional localized 'showMoreText' parameter, defaulting to the localized 'show_all' string if not provided.
- Added new localized strings in 'messages_ar.dart' and 'messages_en.dart' for 'show_all', 'holy_quran', 'welcome', 'search_mention_or_reciter', 'shortcuts', and 'mention_of_the_day'.
- Updated 'intl_ar.arb' and 'intl_en.arb' files with the new localized strings to ensure consistency and support for future translations.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,5 +1,11 @@
 {
     "@@locale": "ar",
     "app_name": "فذكر",
-    "light_journey_begins_here": "رحلة النور تبدأ من هنا كن أول من يكتشف تطبيقنا الروحي الجديد"
+    "light_journey_begins_here": "رحلة النور تبدأ من هنا كن أول من يكتشف تطبيقنا الروحي الجديد",
+    "show_all": "عرض الكل",
+    "holy_quran": "القران الكريم",
+    "welcome": "اهلا بيك",
+    "search_mention_or_reciter": "ابحث عن ذكر أو قارئ ...",
+    "shortcuts": "الاختصارات",
+    "mention_of_the_day": "ذكر اليوم من.."
 }
