Add About Religion Section to Home View
This commit introduces a new section titled "About Religion" to the home view of the application. The section is implemented as a new widget, `AboutReligionColumn`, which is included in the `home_view_body.dart` file. The widget displays a label with a "Show More" option, localized for both English and Arabic languages.

The commit includes the following changes:
1. Creation of the `AboutReligionColumn` widget in `about_religion_column.dart`.
2. Integration of the `AboutReligionColumn` into the `home_view_body.dart` to display the new section.
3. Updates to the localization files (`messages_ar.dart`, `messages_en.dart`, `l10n/intl_ar.arb`, `l10n/intl_en.arb`) to include the new "About Religion" string.
4. Adjustments to the `home_view_body.dart` to ensure the new section fits seamlessly within the existing layout.

This addition enhances the home view by providing users with easy access to information about the religion, contributing to the app's educational and informative purpose.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -7,5 +7,6 @@
     "welcome": "اهلا بيك",
     "search_mention_or_reciter": "ابحث عن ذكر أو قارئ ...",
     "shortcuts": "الاختصارات",
-    "mention_of_the_day": "ذكر اليوم من.."
+    "mention_of_the_day": "ذكر اليوم من..",
+    "about_religion": "عن الدين"
 }
