--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -7,5 +7,6 @@
     "welcome": "Welcome",
     "search_mention_or_reciter": "Search for a mention or reciter...",
     "shortcuts": "Shortcuts",
-    "mention_of_the_day": "Mention of the Day from.."
+    "mention_of_the_day": "Mention of the Day from..",
+    "about_religion": "About Religion"
 }
