Update Bottom Navigation Bar Icons and Titles
- Updated the icons and titles in the custom bottom navigation bar to reflect new design specifications.
- Replaced hardcoded strings with localized strings from the `l10n` package for better internationalization support.
- Adjusted icon sizes and assets to match the new design requirements.
- Added new localized strings for "Favorites", "Notifications", "Your Home", "Prayer Times", and "Settings" in both Arabic and English localization files.
- Ensured all changes are consistent with the project's internationalization standards and design guidelines.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -8,5 +8,10 @@
     "search_mention_or_reciter": "ابحث عن ذكر أو قارئ ...",
     "shortcuts": "الاختصارات",
     "mention_of_the_day": "ذكر اليوم من..",
-    "about_religion": "عن الدين"
+    "about_religion": "عن الدين",
+    "favorites": "المفضلة",
+    "notifications": "الاشعارات",
+    "your_home": "بيتك",
+    "prayer_times": "أوقات الصلاة",
+    "settings": "الاعدادات"
 }
