Refactor AboutReligionColumn and AboutReligionItem widgets for improved layout and localization support
- Adjusted the height of SizedBox in AboutReligionColumn to improve spacing consistency.
- Modified the height of the ListView in AboutReligionColumn to better fit content.
- Wrapped AboutReligionItem in FittedBox for better scaling within the ListView.
- Updated AboutReligionItem to use SizedBox for better width management and aspect ratio handling.
- Integrated localization support for the "Podcast" label in AboutReligionItem.
- Added "Podcast" translation to Arabic and English localization files.
- Updated SVG import in AboutReligionItem to use flutter_svg package correctly.
- Adjusted padding and width of SVG icon in AboutReligionItem for better alignment.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -13,5 +13,6 @@
     "notifications": "Notifications",
     "your_home": "Your Home",
     "prayer_times": "Prayer Times",
-    "settings": "Settings"
+    "settings": "Settings",
+    "podcast": "Podcast: "
 }
