--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -13,5 +13,6 @@
     "notifications": "الاشعارات",
     "your_home": "بيتك",
     "prayer_times": "أوقات الصلاة",
-    "settings": "الاعدادات"
+    "settings": "الاعدادات",
+    "podcast": "بودكاست: "
 }
