Add Qiblah Compass Enhancements and Improvements
- Introduced a new animated GIF to guide users on how to move their device for better compass accuracy.
- Enhanced the Qiblah view with an improved app bar and navigation.
- Added a dialog to instruct users on optimizing compass results by moving their device.
- Improved responsiveness of the custom navigation bar by adjusting font sizes dynamically.
- Updated Qiblah compass UI with clearer instructions and a new bottom section displaying compass angles.
- Integrated bounceable effects for better user interaction on navigation elements.
- Added localization support for new UI elements and error messages.
- Updated assets and font styles to match the new design enhancements.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -14,5 +14,11 @@
     "your_home": "بيتك",
     "prayer_times": "أوقات الصلاة",
     "settings": "الاعدادات",
-    "podcast": "بودكاست: "
+    "podcast": "بودكاست: ",
+    "correct_qibla": "أنت الان تواجه القبلة الصحيحة!",
+    "some_error_occurred": "حدث خطأ ما",
+    "waiting_for_compass_data": "في انتظار بيانات البوصلة ...",
+    "move_for_better_results": "تحرك لتحقيق نتائج أفضل",
+    "tilt_and_move_phone": "قم بإمالة وتحريك هاتفك حوالي 3 مرات مثل هذا:",
+    "done": "تم"
 }
