Add "sebha" translation to Arabic and English locales
Added the translation for "sebha" (meaning "rosary" in English) to the Arabic and English locales in order to provide a more complete localization for the app.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -20,5 +20,6 @@
     "waiting_for_compass_data": "في انتظار بيانات البوصلة ...",
     "move_for_better_results": "تحرك لتحقيق نتائج أفضل",
     "tilt_and_move_phone": "قم بإمالة وتحريك هاتفك حوالي 3 مرات مثل هذا:",
-    "done": "تم"
+    "done": "تم",
+    "sebha": "السبحة"
 }
