--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -20,5 +20,6 @@
     "waiting_for_compass_data": "Waiting for compass data ...",
     "move_for_better_results": "Move for better results",
     "tilt_and_move_phone": "Tilt and move your phone about 3 times like this:",
-    "done": "Done"
+    "done": "Done",
+    "sebha": "Sibha"
 }
