Refactor search view UI
- Updated search view UI to include a header with a search field and a search button.
- Changed the search field hint text to "Search for a zikr or hadith ..."
- Removed unnecessary code and adjusted padding.
- Updated Arabic and English localization files to reflect the new search field hint text.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -5,7 +5,7 @@
     "show_all": "عرض الكل",
     "holy_quran": "القران الكريم",
     "welcome": "اهلا بيك",
-    "search_mention_or_reciter": "ابحث عن ذكر أو قارئ ...",
+    "search_zikr_or_hadith": "ابحث عن ذكر أو حديث ...",
     "shortcuts": "الاختصارات",
     "mention_of_the_day": "ذكر اليوم من..",
     "about_religion": "عن الدين",
