--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,7 +5,7 @@
     "show_all": "Show All",
     "holy_quran": "The Holy Quran",
     "welcome": "Welcome",
-    "search_mention_or_reciter": "Search for a mention or reciter...",
+    "search_zikr_or_hadith": "Search for a zikr or hadith ...",
     "shortcuts": "Shortcuts",
     "mention_of_the_day": "Mention of the Day from..",
     "about_religion": "About Religion",
