Add Quran feature and its widget
- Add QuranView and its widget to display the Quran page
- Update Arabic translation for "holy_quran" key
- Update onGenerateRoutes function to handle QuranView route

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -3,7 +3,7 @@
     "app_name": "فذكر",
     "light_journey_begins_here": "رحلة النور تبدأ من هنا كن أول من يكتشف تطبيقنا الروحي الجديد",
     "show_all": "عرض الكل",
-    "holy_quran": "القران الكريم",
+    "holy_quran": "القرآن الكريم",
     "welcome": "اهلا بيك",
     "search_zikr_or_hadith": "ابحث عن ذكر أو حديث ...",
     "shortcuts": "الاختصارات",
